# Evrenos-Derivation

./: CMakeLists.txt  config.hpp  test.txt  test1.cpp  validation_layer.hpp  validation_layers.cpp
include/: derivation_scopes.hpp  utilities.hpp  validation_layers.hpp
src/: derivation_scopes.cpp  main.cpp  validation_layers.cpp
